--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!--
   ============================================================
-  index.html — Nonex Main Menu
+  index.html — NON-X Main Menu
   ============================================================
-  Entry point for the Nonex web game. Presents the player with
+  Entry point for the NON-X web game. Presents the player with
   platform selection (Computer / Mobile), settings toggles, and
   a Play button that navigates to the appropriate game file.
 
@@ -33,7 +33,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Nonex</title>
+  <title>NON-X</title>
   <style>
     /* Reset — consistent box model across all elements */
     *,
@@ -306,7 +306,7 @@
   <div class="menu-wrap">
 
     <!-- Game title -->
-    <div class="title">Nonex</div>
+    <div class="title">NON-X</div>
 
     <!-- Platform selector: determines which game file is loaded on Play -->
     <div class="platform-group">
